--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.password=password
 
 mybatis.mapperLocations=classpath:mapper/CodRegion.xml
 
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
+#spring.redis.host=127.0.0.1
+3spring.redis.port=6379
 
 #客户端超时时间单位是毫秒 默认是2000
 spring.redis.timeout=10000
